--- a/sitemap.org
+++ b/sitemap.org
@@ -1,5 +1,6 @@
 #+TITLE: Sitemap for project org-notes
 
+   + [[file:about.org][about]]
    + [[file:theindex.org][Index]]
    + [[file:index.org][Mark Wallace's Wiki]]
    + [[file:remember.org][remember]]
