--- a/sitemap.org
+++ b/sitemap.org
@@ -5,3 +5,4 @@
    + [[file:index.org][Mark Wallace's Wiki]]
    + [[file:remember.org][remember]]
    + [[file:test_org.org][Test Org Syntax]]
+   + [[file:how_wiki_is_built.org][本站是如何搭建的]]
