--- a/test_org.org
+++ b/test_org.org
@@ -45,7 +45,7 @@ remember
 Image link:
 #+CAPTION: This is the caption for the next figure link (or table)
 #+NAME:   fig:SED-HR4049
-[[file:image/test.jpg]]
+[[file:images/test.jpg]]
 
 #+BEGIN_SRC emacs-lisp
 (defun org-xor (a b)
