--- a/sitemap.org
+++ b/sitemap.org
@@ -7,6 +7,7 @@
    + [[file:htdp.org][How to Design Programs Notes]]
    + [[file:theindex.org][Index]]
    + [[file:index.org][Mark Wallace's Wiki]]
+   + [[file:python_notes.org][python Notes]]
    + [[file:racket_notes.org][Racket Notes]]
    + [[file:remember.org][remember]]
    + [[file:slackware_notes.org][Slackware Notes]]
@@ -14,3 +15,4 @@
    + [[file:Thinking_In_Cpp.org][Thinking In C++ Notes]]
    + [[file:Unix_Network_Programming_v2.org][UNIX Network Programming Vol.2 Notes]]
    + [[file:how_wiki_is_built.org][本站是如何搭建的]]
+   + [[file:interview.org][面试技能收集]]
