--- a/sitemap.org
+++ b/sitemap.org
@@ -14,5 +14,6 @@
    + [[file:test_org.org][Test Org Syntax]]
    + [[file:Thinking_In_Cpp.org][Thinking In C++ Notes]]
    + [[file:Unix_Network_Programming_v2.org][UNIX Network Programming Vol.2 Notes]]
+   + [[file:Books.org][书籍]]
    + [[file:how_wiki_is_built.org][本站是如何搭建的]]
    + [[file:interview.org][面试技能收集]]
